kube-data/tomcat_project/myapp-deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: myapp-dev

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: myapp-dev
 namespace: myapp-dev
spec:
 replicas: 1
 template:
   metadata:
     labels:
       app:  myapp-dev
   spec:
     containers:
     - name: myapp-dev
       args:
       image: my-tomcat:v2
       imagePullPolicy: IfNotPresent
       ports:
       - containerPort: 8080
         protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-dev
  namespace: myapp-dev
  labels:
    app: myapp-dev
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: myapp-dev
